--- a/_extensions/soles-assignment/_extension.yml
+++ b/_extensions/soles-assignment/_extension.yml
@@ -1,7 +1,7 @@
 title: soles assignment template
 author: Januar
-version: 1.0.0
-quarto-required: ">=1.3.2"
+version: 1.1.1
+quarto-required: ">=1.3.450"
 contributes:
   formats:
     html:
@@ -19,7 +19,7 @@ contributes:
       fig-cap-location: margin
       css: assets/styles.css
     pdf:
-      pdf-engine: lualatex # lualatex pdflatex lualatex
+      pdf-engine: xelatex # lualatex pdflatex lualatex
       # pdf-engine-opt: -xelatex  # use with latexmk only
       include-in-header:
         - soles-pdf.tex
@@ -33,3 +33,7 @@ contributes:
       monofont: Source Code Pro
       monofontoptions: "Scale=0.75"
       linestretch: 1.2
+    typst:
+      template-partials:
+        - typst-template.typ
+        - typst-show.typ
